--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@openzeppelin/contracts": "^4.7.3",
+    "alchemy-sdk": "^2.2.0",
     "chai": "^4.3.6",
     "eth-permit": "^0.2.3",
     "eth-permit-ethers": "^0.2.1",
